Refactor and split OSM plugin from server plugin, updating package structure and renaming files for better organization.