@@ -26,11 +26,9 @@ import static org.hamcrest.CoreMatchers.hasItem;
 import static org.neo4j.configuration.GraphDatabaseSettings.DEFAULT_DATABASE_NAME;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.logging.Logger;
 import org.assertj.core.api.Assertions;
 import org.geotools.api.data.ResourceInfo;
 import org.geotools.api.data.SimpleFeatureSource;
@@ -39,24 +37,20 @@ import org.geotools.api.feature.simple.SimpleFeatureType;
 import org.geotools.data.simple.SimpleFeatureCollection;
 import org.geotools.data.simple.SimpleFeatureIterator;
 import org.geotools.geometry.jts.ReferencedEnvelope;
-import org.geotools.referencing.crs.DefaultGeographicCRS;
 import org.hamcrest.MatcherAssert;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.neo4j.driver.AuthTokens;
 import org.neo4j.driver.GraphDatabase;
+import org.neo4j.driver.Session;
 import org.neo4j.driver.exceptions.ClientException;
-import org.neo4j.gis.spatial.LogListener;
 import org.neo4j.gis.spatial.functions.SpatialFunctions;
-import org.neo4j.gis.spatial.osm.OSMImporter;
 import org.neo4j.gis.spatial.procedures.SpatialProcedures;
 import org.neo4j.harness.Neo4jBuilder;
 import org.neo4j.harness.Neo4jBuilders;
 import org.neo4j.spatial.testutils.Neo4jTestCase;
 
 public class Neo4jSpatialDataStoreTest extends Neo4jTestCase {
-
-	private static final Logger LOGGER = Logger.getLogger(Neo4jSpatialDataStoreTest.class.getName());
 
 	@Override
 	protected List<Class<?>> loadProceduresAndFunctions() {
@@ -65,15 +59,28 @@ public class Neo4jSpatialDataStoreTest extends Neo4jTestCase {
 
 	@BeforeEach
 	public void setup() throws Exception {
-		OSMImporter importer = new OSMImporter("map", new LogListener(LOGGER));
-		importer.setCharset(StandardCharsets.UTF_8);
-		importer.importFile(graphDb(), "map.osm");
-		importer.reIndex(graphDb());
+		try (Session session = driver.session()) {
+			// Create a test layer
+			session.run("CALL spatial.addPointLayer('testlayer')");
+
+			// Add test geometries with properties
+			session.run("""
+					UNWIND [
+						{name: 'Test Point 1', latitude: 56.0, longitude: 13.0},
+						{name: 'Test Point 2', latitude: 56.1, longitude: 13.1},
+						{name: 'Nybrodalsvägen', latitude: 56.05, longitude: 13.05}
+					] AS point
+					CREATE (n:TestGeometry {name: point.name, latitude: point.latitude, longitude: point.longitude})
+					WITH n
+					CALL spatial.addNode('testlayer', n) YIELD node
+					RETURN node
+					""");
+		}
 	}
 
 
 	@Test
-	public void shouldFailOnNonSpatialDatabase() throws IOException {
+	public void shouldFailOnNonSpatialDatabase() {
 		Neo4jBuilder neo4jBuilder = Neo4jBuilders
 				.newInProcessBuilder();
 		try (
@@ -95,24 +102,25 @@ public class Neo4jSpatialDataStoreTest extends Neo4jTestCase {
 		Neo4jSpatialDataStore store = new Neo4jSpatialDataStore(driver, DEFAULT_DATABASE_NAME);
 		String[] layers = store.getTypeNames();
 		MatcherAssert.assertThat("Expected one layer", layers.length, equalTo(1));
-		MatcherAssert.assertThat(layers[0], equalTo("map"));
+		MatcherAssert.assertThat(layers[0], equalTo("testlayer"));
 	}
 
 	@Test
 	public void shouldBeAbleToGetSchemaForLayer() throws IOException {
 		Neo4jSpatialDataStore store = new Neo4jSpatialDataStore(driver, DEFAULT_DATABASE_NAME);
-		SimpleFeatureType schema = store.getSchema("map");
-		MatcherAssert.assertThat("Expected 25 attributes", schema.getAttributeCount(), equalTo(25));
+		SimpleFeatureType schema = store.getSchema("testlayer");
 		MatcherAssert.assertThat("Expected geometry attribute to be called 'the_geom'",
-				schema.getAttributeDescriptors().get(0).getLocalName(), equalTo("the_geom"));
+				schema.getAttributeDescriptors().getFirst().getLocalName(), equalTo("the_geom"));
+		// Test should have at least geometry and name attributes
+		MatcherAssert.assertThat("Expected at least 2 attributes", schema.getAttributeCount() >= 2);
 	}
 
 	@Test
 	public void shouldBeAbleToGetFeatureSourceForLayer() throws IOException {
 		Neo4jSpatialDataStore store = new Neo4jSpatialDataStore(driver, DEFAULT_DATABASE_NAME);
-		SimpleFeatureSource source = store.getFeatureSource("map");
+		SimpleFeatureSource source = store.getFeatureSource("testlayer");
 		SimpleFeatureCollection features = source.getFeatures();
-		MatcherAssert.assertThat("Expected 217 features", features.size(), equalTo(217));
+		MatcherAssert.assertThat("Expected 3 features", features.size(), equalTo(3));
 		MatcherAssert.assertThat("Expected there to be a feature with name 'Nybrodalsvägen'", featureNames(features),
 				hasItem("Nybrodalsvägen"));
 	}
@@ -120,13 +128,15 @@ public class Neo4jSpatialDataStoreTest extends Neo4jTestCase {
 	@Test
 	public void shouldBeAbleToGetInfoForLayer() throws IOException {
 		Neo4jSpatialDataStore store = new Neo4jSpatialDataStore(driver, DEFAULT_DATABASE_NAME);
-		SimpleFeatureSource source = store.getFeatureSource("map");
+		SimpleFeatureSource source = store.getFeatureSource("testlayer");
 		ResourceInfo info = source.getInfo();
 		ReferencedEnvelope bounds = info.getBounds();
-		MatcherAssert.assertThat(bounds, equalTo(new ReferencedEnvelope(12.7856667, 13.2873561, 55.9254241, 56.2179056,
-				DefaultGeographicCRS.WGS84)));
+		// Updated bounds to match our test data (approximately 13.0-13.1 lon, 56.0-56.1 lat)
+		MatcherAssert.assertThat("Bounds should cover our test data",
+				bounds.getMinX() <= 13.0 && bounds.getMaxX() >= 13.1 &&
+						bounds.getMinY() <= 56.0 && bounds.getMaxY() >= 56.1);
 		SimpleFeatureCollection features = source.getFeatures();
-		MatcherAssert.assertThat("Expected 217 features", features.size(), equalTo(217));
+		MatcherAssert.assertThat("Expected 3 features", features.size(), equalTo(3));
 		MatcherAssert.assertThat("Expected there to be a feature with name 'Nybrodalsvägen'", featureNames(features),
 				hasItem("Nybrodalsvägen"));
 	}
